[gd_scene format=3 uid="uid://bq6vfnoflyxuk"]

[ext_resource type="Theme" uid="uid://ddwm0nvjciyk4" path="res://assets/global_theme.tres" id="1_theme"]
[ext_resource type="Script" uid="uid://061aabtjmcp3" path="res://addons/diablo_huma_studio/db_manager/visual_editors/view_data_table_menu/dbm_view_data_table_menu.gd" id="2_script"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sep"]
thickness = 4

[node name="ViewDataTableMenu" type="Control" unique_id=1787729075]
custom_minimum_size = Vector2(1000, 800)
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 800.0
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=866506379]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1569393584]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer" unique_id=46379445]
layout_mode = 2
text = "View Data"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1101769496]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="DataTypeRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=611761947]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/DataTypeRow" unique_id=368434603]
layout_mode = 2
text = "Data Type:"

[node name="DataTypeSelector" type="OptionButton" parent="MarginContainer/VBoxContainer/DataTypeRow" unique_id=320772319]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 1
popup/item_0/text = "LevelData"
popup/item_0/id = 0

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=829331817]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="DataTree" type="Tree" parent="MarginContainer/VBoxContainer" unique_id=1563965245]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
hide_root = true

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=1221940023]
unique_name_in_owner = true
layout_mode = 2
text = "Showing 0 record(s)"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1371875973]
layout_mode = 2
theme_override_constants/separation = 10
theme_override_styles/separator = SubResource("StyleBoxLine_sep")

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer" unique_id=250075042]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/DataTypeRow/DataTypeSelector" to="." method="_on_data_type_selector_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
